; ModuleID = '/home/carl/AnghaBench/git/extr_revision.c_init_all_refs_cb.c'
source_filename = "/home/carl/AnghaBench/git/extr_revision.c_init_all_refs_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.all_refs_cb = type { i32, i32*, %struct.rev_info* }
%struct.rev_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.all_refs_cb*, %struct.rev_info*, i32)* @init_all_refs_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_all_refs_cb(%struct.all_refs_cb* %0, %struct.rev_info* %1, i32 %2) #0 {
  %4 = alloca %struct.all_refs_cb*, align 8
  %5 = alloca %struct.rev_info*, align 8
  %6 = alloca i32, align 4
  store %struct.all_refs_cb* %0, %struct.all_refs_cb** %4, align 8
  store %struct.rev_info* %1, %struct.rev_info** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.rev_info*, %struct.rev_info** %5, align 8
  %8 = load %struct.all_refs_cb*, %struct.all_refs_cb** %4, align 8
  %9 = getelementptr inbounds %struct.all_refs_cb, %struct.all_refs_cb* %8, i32 0, i32 2
  store %struct.rev_info* %7, %struct.rev_info** %9, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.all_refs_cb*, %struct.all_refs_cb** %4, align 8
  %12 = getelementptr inbounds %struct.all_refs_cb, %struct.all_refs_cb* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 8
  %13 = load %struct.rev_info*, %struct.rev_info** %5, align 8
  %14 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %13, i32 0, i32 0
  store i32 1, i32* %14, align 4
  %15 = load %struct.all_refs_cb*, %struct.all_refs_cb** %4, align 8
  %16 = getelementptr inbounds %struct.all_refs_cb, %struct.all_refs_cb* %15, i32 0, i32 1
  store i32* null, i32** %16, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
